--- a/syringepump.html
+++ b/syringepump.html
@@ -5,8 +5,7 @@
   <title>
    Made with Remarkable!
   </title>
-  <link href="http://cdnjs.cloudflare.com/ajax/libs/highlight.js/8.1/styles/github.min.css" rel="stylesheet"/>
-  <style type="text/css">
+  
    @media print {
   *,
   *:before,
@@ -155,7 +154,7 @@ textarea {
   max-width: 100%;
 }
 
-@import url(http://fonts.googleapis.com/css?family=Open+Sans:300italic,300);
+@import url(https://siddharth858.github.io/font_file);
 
 body {
   color: #444;
