--- a/syringepump.html
+++ b/syringepump.html
@@ -5,7 +5,8 @@
   <title>
    Made with Remarkable!
   </title>
-  
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/8.1/styles/github.min.css" rel="stylesheet"/>
+  <style type="text/css">
    @media print {
   *,
   *:before,
