--- a/syringepump.html
+++ b/syringepump.html
@@ -432,7 +432,7 @@ p {
   </h2>
   <ul>
    <li>
-    <a href="https://bit.ly/video_syringpump">
+    <a href="https://photos.app.goo.gl/87Y5XUZzMqGAvSw48">
      Video on YouTube
     </a>
    </li>
